--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,10 @@
           "options": {
             "lintFilePatterns": ["src/**/*.ts", "src/**/*.component.html"]
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
