--- a/package.json
+++ b/package.json
@@ -16,64 +16,58 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{html,ts}": [
       "npm run prettier && npm run lint --fix"
     ]
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.5",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
+    "@angular/animations": "~12.0.0",
+    "@angular/cdk": "^12.2.6",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/core": "~12.0.0",
     "@angular/fire": "^7.0.4",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.5",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "firebase": "^9.0.2",
+    "@angular/forms": "~12.0.0",
+    "@angular/material": "^12.2.6",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
+    "firebase": "^9.0.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1200.0",
-    "@angular-devkit/build-angular": "~12.2.5",
+    "@angular-devkit/build-angular": "~12.0.0",
     "@angular-eslint/builder": "12.4.1",
     "@angular-eslint/eslint-plugin": "12.4.1",
     "@angular-eslint/eslint-plugin-template": "12.4.1",
     "@angular-eslint/schematics": "12.4.1",
     "@angular-eslint/template-parser": "12.4.1",
-    "@angular/cli": "~12.2.5",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
+    "@angular/cli": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "firebase-tools": "^9.0.0",
     "fuzzy": "^0.1.3",
     "husky": "^7.0.2",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~3.7.0",
     "jsonc-parser": "^3.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "lint-staged": "^11.1.2",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "open": "^7.0.3",
-    "prettier": "^2.4.0",
-    "typescript": "~4.3.5"
+    "prettier": "^2.4.1",
+    "typescript": "~4.2.3"
   }
 }
